# bayesian-classifier

./: .gitignore  ClassifierFullBayes.py  ClassifierNaiveBayes.py  README.md  README.rst  TrainerFullBayes.py  TrainerNaiveBayes.py  pyproject.toml  readme.txt  setup.py  utils.py
.github/workflows/: python-publish.yml
bayesian_classifier/: __init__.py  __main__.py  classifiers.py  dataset.py  evaluate.py
resource/: iristest1.txt  iristest2.txt  iristest3.txt  iristrain1.txt  iristrain2.txt  iristrain3.txt  model1.txt  model2.txt  model3.txt  modeln1.txt  modeln2.txt  modeln3.txt
